--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mi_primer_api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Kevin-v-v/firstAPI#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sequelize": "^6.25.2",
+    "sqlite3": "^5.1.2"
   }
 }
